kuber_my/deployment_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-frontend
  labels:
   app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
   metadata:
    labels:
        app: frontend
   spec:
    containers:
      - name: app
        image: ivannikita/netrology_diplom:v0.3
        ports:
          - containerPort: 80
