kuber_my/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
  - name: netology-svc-front
    port: 8080
    protocol: TCP
    targetPort: 80
