kuber_my/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netologydip
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: "dip.digitum.su"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: netology-frontend-service
            port:
              number: 8080
